--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -36,19 +36,43 @@
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
     <Folder Include="Interfaces\" />
+    <Folder Include="Models\Links\" />
   </ItemGroup>
   <ItemGroup>
     <TargetPlatform Include="WindowsPhoneApp, Version=8.1" />
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CollectionSlice.cs" />
     <Compile Include="Common\CoreConstants.cs" />
+    <Compile Include="Common\ITreeWalkContextBreak.cs" />
     <Compile Include="Common\NetworkProfile.cs" />
+    <Compile Include="Common\TreeApplyFunc.cs" />
+    <Compile Include="Common\TreeWalkContext.cs" />
+    <Compile Include="Common\Utility.cs" />
+    <Compile Include="Models\Posts\PostNode.cs" />
+    <Compile Include="Models\Posts\PostNodeAttribute.cs" />
+    <Compile Include="Models\Posts\PostNodeAttributeBase.cs" />
+    <Compile Include="Models\Posts\PostNodeBase.cs" />
+    <Compile Include="Models\Posts\PostNodeBasicAttribute.cs" />
+    <Compile Include="Models\Posts\PostNodeBoardLink.cs" />
+    <Compile Include="Models\Posts\PostNodeBreak.cs" />
+    <Compile Include="Models\Posts\PostNodeLinkAttribute.cs" />
+    <Compile Include="Models\Posts\PostNodes.cs" />
+    <Compile Include="Models\Posts\PostTextNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\ServiceContainer.cs" />
     <Compile Include="Services\ServiceHelper.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid+MonoTouch\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
