--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Common\Utility.cs" />
     <Compile Include="Models\Links\BoardLink.cs" />
     <Compile Include="Models\Links\BoardLinkBase.cs" />
+    <Compile Include="Models\Posts\PostFlags.cs" />
     <Compile Include="Models\Posts\PostImage.cs" />
     <Compile Include="Models\Posts\PostImageBase.cs" />
     <Compile Include="Models\Posts\PostImageWithThumbnail.cs" />
@@ -65,6 +66,11 @@
     <Compile Include="Models\Posts\PostNodeLinkAttribute.cs" />
     <Compile Include="Models\Posts\PostNodes.cs" />
     <Compile Include="Models\Posts\PostTextNode.cs" />
+    <Compile Include="Models\Posts\PostTree.cs" />
+    <Compile Include="Models\Posts\PostTreeExtension.cs" />
+    <Compile Include="Models\Posts\PostTreeCountryExtension.cs" />
+    <Compile Include="Models\Posts\PostTreeIconExtension.cs" />
+    <Compile Include="Models\Posts\PostTreePosterExtension.cs" />
     <Compile Include="Models\Posts\PostYoutubeVideo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServiceBase.cs" />
