--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -52,6 +52,21 @@
     <Compile Include="Common\Utility.cs" />
     <Compile Include="Models\Links\BoardLink.cs" />
     <Compile Include="Models\Links\BoardLinkBase.cs" />
+    <Compile Include="Models\Links\BoardPageLink.cs" />
+    <Compile Include="Models\Links\BoardMediaLink.cs" />
+    <Compile Include="Models\Links\MediaLink.cs" />
+    <Compile Include="Models\Links\PostLink.cs" />
+    <Compile Include="Models\Links\RootLink.cs" />
+    <Compile Include="Models\Links\ThreadLink.cs" />
+    <Compile Include="Models\Links\YoutubeLink.cs" />
+    <Compile Include="Models\Makaba\MakabaBoardPageExtension.cs" />
+    <Compile Include="Models\Makaba\MakabaCollectionExtension.cs" />
+    <Compile Include="Models\Makaba\MakabaEntityFlags.cs" />
+    <Compile Include="Models\Makaba\MakabaEntityTree.cs" />
+    <Compile Include="Models\Makaba\MakabaIconReference.cs" />
+    <Compile Include="Models\Posts\BoardPageTreeExtension.cs" />
+    <Compile Include="Models\Posts\BoardPageTree.cs" />
+    <Compile Include="Models\Posts\IPostTreeCollection.cs" />
     <Compile Include="Models\Posts\PostFlags.cs" />
     <Compile Include="Models\Posts\PostImage.cs" />
     <Compile Include="Models\Posts\PostImageBase.cs" />
@@ -68,11 +83,17 @@
     <Compile Include="Models\Posts\PostNodes.cs" />
     <Compile Include="Models\Posts\PostTextNode.cs" />
     <Compile Include="Models\Posts\PostTree.cs" />
+    <Compile Include="Models\Posts\PostTreeCollection.cs" />
+    <Compile Include="Models\Posts\PostTreeCollectionExtension.cs" />
+    <Compile Include="Models\Posts\PostTreeCollectionMode.cs" />
+    <Compile Include="Models\Posts\PostTreeContainer.cs" />
     <Compile Include="Models\Posts\PostTreeExtension.cs" />
     <Compile Include="Models\Posts\PostTreeCountryExtension.cs" />
     <Compile Include="Models\Posts\PostTreeIconExtension.cs" />
     <Compile Include="Models\Posts\PostTreePosterExtension.cs" />
     <Compile Include="Models\Posts\PostYoutubeVideo.cs" />
+    <Compile Include="Models\Posts\ThreadPreviewTree.cs" />
+    <Compile Include="Models\Posts\ThreadTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\ServiceContainer.cs" />
