--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -41,6 +41,7 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Captcha\CaptchaService.cs" />
     <Compile Include="Captcha\ICaptcha.cs" />
     <Compile Include="Captcha\ICaptchaConfig.cs" />
     <Compile Include="Captcha\ICaptchaService.cs" />
