--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -55,11 +55,14 @@
     <Compile Include="Common\IConfiguration.cs" />
     <Compile Include="Common\IDateService.cs" />
     <Compile Include="Common\IRegexCacheService.cs" />
+    <Compile Include="Common\ISerializerCacheService.cs" />
     <Compile Include="Common\ITreeWalkContextBreak.cs" />
     <Compile Include="Common\NetworkProfile.cs" />
     <Compile Include="Common\RegexCacheService.cs" />
+    <Compile Include="Common\SerializerCacheService.cs" />
     <Compile Include="Common\TreeApplyFunc.cs" />
     <Compile Include="Common\TreeWalkContext.cs" />
+    <Compile Include="Common\UniqueIdHelper.cs" />
     <Compile Include="Common\Utility.cs" />
     <Compile Include="Configuration\AppDataConfigBase.cs" />
     <Compile Include="Configuration\CaptchaConfig.cs" />
