Использование библиотеки http://www.nuget.org/packages/Nito.AsyncEx

--- a/DvachBrowser3.Core/packages.config
+++ b/DvachBrowser3.Core/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="portable-win81+wpa81" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="portable-win81+wpa81" />
+  <package id="Nito.AsyncEx" version="3.0.0" targetFramework="portable-win81+wpa81" />
 </packages>
