--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -214,8 +214,10 @@
     <Compile Include="Services\ServiceHelper.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
     <Compile Include="Storage\Files\FileSerializationHelper.cs" />
+    <Compile Include="Storage\Files\FolderStorage.cs" />
     <Compile Include="Storage\Files\StorageSizeCache.cs" />
     <Compile Include="Storage\Files\StorageSizeCacheItem.cs" />
+    <Compile Include="Storage\ICacheFolderInfo.cs" />
     <Compile Include="Storage\IStorageService.cs" />
   </ItemGroup>
   <ItemGroup>
